--- a/05.Object Composition Lab/.vscode/launch.json
+++ b/05.Object Composition Lab/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Launch",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/04.cars.js",
+            "program": "${workspaceRoot}/05.sum/sum.js",
             "stopOnEntry": false,
             "args": [],
             "cwd": "${workspaceRoot}",
