--- a/06.Advanced Functions, Function Context/.vscode/launch.json
+++ b/06.Advanced Functions, Function Context/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Launch",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/02.argument-info.js",
+            "program": "${workspaceRoot}/07.monkey-patcher.js",
             "stopOnEntry": false,
             "args": [],
             "cwd": "${workspaceRoot}",
