--- a/07.Object Composition Execises/.vscode/launch.json
+++ b/07.Object Composition Execises/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Launch",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/06.sorted-list.js",
+            "program": "${workspaceRoot}/05.string-extension.js",
             "stopOnEntry": false,
             "args": [],
             "cwd": "${workspaceRoot}",
